delayService fix